<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/btn_aplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/aplicar"
        android:onClick="aplicar"
        app:layout_constraintBottom_toBottomOf="@+id/edt_precio_autobus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_precio_autobus"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edt_precio_autobus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/precio_del_autobus"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btn_aplicar"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_num_pasajeros"
        android:layout_width="216dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:text="@string/numero_de_viajes"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_precio_autobus" />

    <TextView
        android:id="@+id/txt_num_pasajeros2"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="28dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txt_num_pasajeros"
        app:layout_constraintStart_toEndOf="@+id/txt_num_pasajeros"
        app:layout_constraintTop_toTopOf="@+id/txt_num_pasajeros"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_precio_viaje"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/precio_del_viaje"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num_pasajeros" />

    <TextView
        android:id="@+id/txt_precio_viaje2"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="76dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txt_precio_viaje"
        app:layout_constraintStart_toEndOf="@+id/txt_precio_viaje"
        app:layout_constraintTop_toTopOf="@+id/txt_precio_viaje"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_ingresos"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/ingresos"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_precio_viaje" />

    <TextView
        android:id="@+id/txt_precio_ingresos2"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="148dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txt_ingresos"
        app:layout_constraintStart_toEndOf="@+id/txt_ingresos"
        app:layout_constraintTop_toTopOf="@+id/txt_ingresos"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_gastos"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/gastos"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ingresos" />

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_gastos" />

    <TextView
        android:id="@+id/txt_precio_gastos2"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="164dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txt_gastos"
        app:layout_constraintStart_toEndOf="@+id/txt_gastos"
        app:layout_constraintTop_toTopOf="@+id/txt_gastos"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_precio_total2"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="188dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txt_total"
        app:layout_constraintStart_toEndOf="@+id/txt_total"
        app:layout_constraintTop_toTopOf="@+id/txt_total"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>